--- a/R/ENADID 2023_Discapacidad en Mèxico.Rmd
+++ b/R/ENADID 2023_Discapacidad en Mèxico.Rmd
@@ -446,6 +446,62 @@ p
 
 ![](../Output/P.Discapacidad por causas_ENADID.png){width="90%" fig-align="center"}
 
+### Tasa de participación económica de la población de 15 años y más, según condición de discapacidad y sexo  
+
+```{r, class.source = "fold-hide", eval = FALSE}
+P.Discapacidad <- read_xlsx(paste0(here::here(), "/Bases/ENADID_2023.xlsx"), sheet = "PEA", range = "A3:D5")
+
+tabla <- P.Discapacidad %>%
+          melt()
+
+p <- tabla %>%
+      ggplot() + 
+        geom_col(aes(x = Condición, 
+                     y = value,
+                     color = variable, 
+                     fill = variable, 
+                     group = variable),
+                 position = "dodge") + 
+         geom_text(aes(x = Condición, 
+                       y = value,
+                       label = value,
+                       color = variable,
+                       fill = variable, 
+                       group = variable),
+                   position = "dodge",
+                   vjust = 0.5, 
+                   fontface = "bold", 
+                   family = "Montserrat Medium") + 
+        theme_transparent() + 
+          theme(plot.title = element_text(size = 22, hjust = 0, family = "Montserrat SemiBold", face = "bold"),
+                plot.subtitle = element_text(size = 18, hjust = 0, family = "Montserrat", face = "bold"),
+                plot.caption = element_text(size = 11, hjust = 0.2, vjust = 1, family = "Montserrat"), 
+                axis.text = element_text(family = "Montserrat"), 
+                axis.title = element_text(family = "Montserrat", size = 15), 
+                legend.key.size = unit(0.5, "cm"),
+                legend.text = element_blank(),
+                legend.title = element_blank(),
+                legend.position = "none"
+               ) + 
+           scale_fill_viridis_d(option = "A", begin = 0.3, end = 0.7) + 
+            scale_color_viridis_d(option = "A", begin = 0.3, end = 0.7) +
+             labs(title = "Tasa de participación económica de la población de 15 años y más, según condición de discapacidad y sexo, 2023",
+                  subtitle = stringr::str_wrap("(porcentajes)", 50),
+                  x = "",
+                  y = "",
+                  fill = "",
+                  color = "",
+                  caption = expression(paste("Fuente: INEGI. Encuesta Nacional de la Dinámica Demográfica (ENADID), 2023. Base de datos. Sistema Nacional de Información Estadística y Geográfica (SNIEG). Información de Interés Nacional (IIN)."))) 
+
+p
+
+path = "Output/P.Discapacidad por PEA_ENADID.pdf"
+ggexport(p, filename = path ,width = 9, height = 7, device = "cairo")
+```
+
+
+![](../Output/P.Discapacidad por PEA_ENADID.png){width="90%" fig-align="center"}
+
 ## Referencias  
 
 INEGI. (2024). Comunicación social, Estadísticas a propósito del día internacional de las personas con discapacidad (3 de diciembre). Retrieved April 8, 2025, from https://www.un.org/es/observances/day-of-  
